plugins {
    id 'java'
    id 'application'
}

sourceCompatibility = '16'
targetCompatibility = '16'

mainClassName = 'com.rs.Launcher'

repositories {
	mavenLocal()
	mavenCentral()
}

group 'darkan'
version '1.0-SNAPSHOT'

dependencies {
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
	implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
	implementation group: 'org.mongodb', name: 'mongodb-driver-sync', version: '4.4.0'
	implementation group: 'org.mongodb', name: 'mongodb-driver-core', version: '4.4.0'
	implementation group: 'io.netty', name: 'netty-all', version: '4.1.72.Final'
	implementation group: 'io.undertow', name: 'undertow-core', version: '2.2.8.Final'
	
	implementation project(':darkan-core')
}

